--- a/index.html
+++ b/index.html
@@ -224,10 +224,7 @@
             </div>
 
                 <div class=" col-12 col-md-3 col-lg-3">
-                    <p class="text-center"> E-book by Mebmarket <br> <a href="https://www.mebmarket.com/ebook-206966-Good-Vibes-Good-Life-
-                    %E0%B9%83%E0%B8%8A%E0%B9%89%E0%B8%84%E0%B8%A5%E0%B8%B7%E0%B9%88%E0%B8%99%E0%B8%9E%E0%
-                    B8%A5%E0%B8%B1%E0%B8%87%E0%B8%9A%E0%B8%A7%E0%B8%81%E0%B8%94%E0%B8%B6%E0%B8%87%E0%B8%94%E0%B8%B9%E0
-                    %B8%94%E0%B8%9E%E0%B8%A5%E0%B8%B1%E0%B8%87%E0%B8%AA%E0%B8%B8%E0%B8%82" target="_blank">
+                    <p class="text-center"> E-book by Mebmarket <br> <a href="https://bookwalker.in.th/series/550670/" target="_blank">
                     <img src="images/logomebnarket.png" class="w-25"></a></p>
                 </div>
 
