--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
             </div>
 
                 <div class=" col-12 col-md-3 col-lg-3">
-                    <p class="text-center"> E-book by Mebmarket <br> <a href="https://bookwalker.in.th/series/550670/" target="_blank">
-                    <img src="images/logomebnarket.png" class="w-25"></a></p>
+                    <p class="text-center"> E-book by Bookwalker <br> <a href="https://bookwalker.in.th/series/550670/" target="_blank">
+                    <img src="images/bookwalkerlogo.png" class="w-25"></a></p>
                 </div>
 
                 <div class=" col-12 col-md-3 col-lg-3 text-center">
