--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Good Vibes, Good Life:หนังสือพลังบวกเพื่อการรักตัวเอง</title>
+    <meta name="keywords"
+        content="พลังบวก,หนังสือพัฒนาตัวเอง,การรักตัวเอง,มุมมองการใช้ชีวิต,Good vibes, Good life,แรงบันดาลใจ">
     <!-- เน้นให้ความสำคัญชของชื่อเรื่องมากขึ้น อย่าลืมเด็ดขาด -->
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
+
     <!--link ตัวหนังสือ-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,17 +38,20 @@
     <!-- box1 หัวเรื่อง -->
     <article class="bodywall">
         <section class="container">
-            <section class="row">
+            <section class="row align-items-center">
                 <!-- รูปเลื่อน -->
-                <div class="col-12 col-md-6 col-lg-6 px-0">
+                <div class=" container col-12 col-md-6 col-lg-6 px-0 p-5">
+                    <!-- d-flex justify-content-center justify-content-md-end จัดรูปให้อยู่ตรงกลาง -->
                     <div class="container">
                         <div id="carouselExample" class="carousel slide">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="images/front cover.jpg" class="d-block w-100" alt="...">
+                                    <img src="images/front cover.jpg" class="mg-fluid h-100 w-100 object-fit-cover"
+                                        alt="...">
                                 </div>
-                                <div class="carousel-item">
-                                    <img src="images/back cover.jpg" class="d-block w-100" alt="...">
+                                <div class="carousel-item item-ipad">
+                                    <img src="images/back cover.jpg" class="mg-fluid h-100 w-100 object-fit-cover"
+                                        alt="...">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
@@ -61,14 +68,14 @@
                     </div>
                 </div>
                 <!--เกริ่น -->
-                <div class="col-12 col-md-6 col-lg-6 my-5 text-center py-5 ">
+                <div class="col-12 col-md-6 col-lg-6 my-5 text-center">
                     <p class="mt-5 covertext" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1500">
                         “อยากเปลี่ยนชีวิตให้มีแต่พลังบวก ต้องเริ่มจากตรงไหน?” </p>
 
-                    <h1 class="py-5 covertext2">ค้นคำตอบที่</h1>
-                    <h1 class="py-5 covertext3" data-aos="fade-up" data-aos-duration="2500">GOOD VIBES,
+                    <h1 class="py- covertext2">ค้นคำตอบที่</h1>
+                    <h1 class="py-2 covertext3" data-aos="fade-up" data-aos-duration="2500">GOOD VIBES,
                         GOOD LIFE</h1>
-                    <h1 class="py-5 covertext2">โดย Vex King</h1>
+                    <h1 class="py- covertext2">โดย Vex King</h1>
 
 
                 </div>
@@ -80,6 +87,11 @@
         <header class="container">
             <nav class="navbar navbar-expand-lg shadow">
                 <div class="container-fluid">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
                     <div class="collapse navbar-collapse nav" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
@@ -97,9 +109,10 @@
             </nav>
         </header>
     </div>
+
     <!-- box3 คำโปรย -->
-    <header class="bgg-01">
-        <section class="container py-5">
+    <header class="bgg-01 img-fluid">
+        <section class="container pt-4">
             <p class="para">ในวันที่ชีวิตเต็มไปด้วยความเร่งรีบ ความคาดหวัง และแรงกดดันจากรอบตัว
                 หลายคนอาจเผลอหลงลืมความสงบในใจของตัวเอง
                 หนังสือ Good Vibes, Good Life โดย Vex King จะพาคุณค้นพบวิธีใช้ “พลังบวก” เพื่อเปลี่ยนวิธีคิด ความรู้สึก
@@ -108,7 +121,7 @@
         </section>
 
         <!-- box4 เนื้อหา -->
-        <div class=" mt-3 p-5">
+        <div class="pt-5">
             <section class="container">
                 <h2 class="text-center" id="01">ทำไม Good Vibes, Good Life ถึงเหมาะกับคนที่ต้องการพลังบวก</h2>
                 <div>
@@ -122,9 +135,9 @@
                     </p>
                 </div>
 
-                <div class="container text-center mt-5 py-5 textquotes" data-aos="fade-zoom-in"
-                    data-aos-easing="ease-in-back" data-aos-delay="400" data-aos-offset="0">
-                    <h1>"Your vibe attracts your tribe"
+                <div class="container text-center textquotes p-5" data-aos="fade-zoom-in" data-aos-easing="ease-in-back"
+                    data-aos-delay="400" data-aos-offset="0">
+                    <h1 class="">"Your vibe attracts your tribe"
                         <br>"Find joy in the little things"
                         <br> "Love the life you live. Live the life you love"
                     </h1>
@@ -132,11 +145,12 @@
             </section>
         </div>
     </header>
+
     <!-- box5 เนื้อหา2 -->
-    <section class="bgg-02 ">
-        <h2 class="text-center py-3" id="02">4 เหตุผลที่ Good Vibes, Good Life พัฒนาคุณให้มีพลังบวก</h2>
+    <section class="bgg-02">
+        <h2 class="text-center pt-5" id="02">4 เหตุผลที่ Good Vibes, Good Life พัฒนาคุณให้มีพลังบวก</h2>
         <article class="container">
-            <article class="row">
+            <article class="row pt-3">
                 <!-- ประโยชน์1 -->
                 <div class="col-12 col-md-6 col-lg-6 text-center">
                     <img src="images/goodvibes03.webp" alt="" class="img-fluid w-50" data-aos="flip-left"
@@ -173,27 +187,27 @@
                         <br>คุณจะเริ่มเห็นเส้นทางใหม่ของการเติบโตทั้งในชีวิตและจิตใจ
                     </p>
                 </div>
-
-
             </article>
     </section>
+
+    <!-- box6 เนื้อหา3ปิดท้าย -->
     <header class="bgg-03">
-        <!-- box6 เนื้อหา3ปิดท้าย -->
-        <section class="py-5 text-center">
+        <section class="text-center pt-4">
+            <!-- ต้องใส่ padding แทน margin เพื่อดัน content เข้าไป -->
             <h2 class="pt-5" id="03">มากกว่าพลังบวก คือการกลับมารักตัวเอง</h2>
             <p class="text-center">
                 Good Vibes, Good Life เป็นมากกว่าหนังสือพัฒนาตัวเอง มันคือการชวนให้เรากลับมาทำความเข้าใจ “พลังในใจ”
-                ของตัวเองอีกครั้ง
+                ของตัวเองอีกครั้ง <br>
                 เพราะเมื่อคุณเริ่มส่งพลังดีๆ ออกไป โลกภายนอกก็จะตอบกลับมาด้วยสิ่งดีๆ เช่นกัน</p>
         </section>
         <!-- box7 คำทิ้งท้าย -->
-        <section class="container mt-3">
-            <p class="text-center">หากคุณกำลังมองหาความสงบ ความมั่นคง และแรงบันดาลใจในการใช้ชีวิต
+        <section class="container mt-3 pt-5">
+            <p class="text-center">หากคุณกำลังมองหาพลังบวก ความสงบ ความมั่นคง และแรงบันดาลใจในการใช้ชีวิต
                 หนังสือเล่มนี้อาจเป็นคำแนะนำที่คุณกำลังตามหาอยู่ก็ได้ 💖</p>
         </section>
 
         <!-- link youtube ยังหาไม่ได้ -->
-        <section class="container mt-3 ">
+        <section class="container ">
             <section class="row">
                 <div class="" style="left: 0; width: 100%; height: 0; position: relative; padding-bottom: 56.25%;">
                     <iframe src="https://www.youtube.com/embed/X8NyW8XAhfg?rel=0"
@@ -207,49 +221,50 @@
     </header>
 
     <!-- div เปล่า -->
-    <div class="colored-box p-2">
+    <div class="colored-box">
     </div>
-    <!-- div ปิด้ทายสีสัน -->
-    <section class=" p-3 bg-bottom">
+    <!-- div ปิดท้ายสีสัน -->
+    <section class=" pt-5 bg-bottom">
         <section class="container">
-        <section class="row">
-            <div class="col-12 col-md-4 col-lg-3 my-auto">
-                <h4 class="text-center">ช่องทางการสั่งซื้อ</h4>
-            </div>
-
-            <div class=" col-12 col-md-3 col-lg-3 text-center">
-                <p>เว็บไซต์นายอินทร์ <br> <a
-                        href="https://www.naiin.com/product/detail/533411?srsltid=AfmBOopj9mSQGLW2NGS1_3U2dnzCDJZ0tKYfN19cNG2b56rtK9lP46S5"
-                        target="_blank"> <img src="images/logoinn.png" class="w-25"></a> </p>
-            </div>
-
-                <div class=" col-12 col-md-3 col-lg-3">
-                    <p class="text-center"> E-book by Bookwalker <br> <a href="https://bookwalker.in.th/series/550670/" target="_blank">
-                    <img src="images/bookwalkerlogo.png" class="w-25"></a></p>
+            <section class="row">
+                <div class="col-12 col-md-6 col-lg-6 my-auto">
+                    <h4 class="text-center">ช่องทางการสั่งซื้อ</h4>
                 </div>
 
-                <div class=" col-12 col-md-3 col-lg-3 text-center">
+                <div class=" col-12 col-md-2 col-lg-2 text-center">
+
+                    <p>เว็บไซต์นายอินทร์ <br> <a
+                            href="https://www.naiin.com/product/detail/533411?srsltid=AfmBOopj9mSQGLW2NGS1_3U2dnzCDJZ0tKYfN19cNG2b56rtK9lP46S5"
+                            target="_blank"> <img src="images/logoinn.png" class="w-25"></a> </p>
+                </div>
+                <div class=" col-12 col-md-2 col-lg-2">
+                    <p class="text-center"> E-book by Bookwalker <br> <a href="https://bookwalker.in.th/series/550670/"
+                            target="_blank">
+                            <img src="images/bookwalkerlogo.png" class="w-25"></a></p>
+                </div>
+
+                <div class=" col-12 col-md-2 col-lg-2 text-center">
                     <p>Amazon <br>
-                    <a href="https://www.amazon.com/dp/1788171829/?bestFormat=tru
+                        <a href="https://www.amazon.com/dp/1788171829/?bestFormat=tru
                 e&k=good%20vibes%20good%20life&ref_=nb_sb_ss_w_scx-ent-pd-bk-d_k1_1_7_de&crid=JZEO5SGVTLVR&sprefix=good%20vi"
-                        target="_blank"><img src="images/amazonlogo.jpg" class="w-25"></a>
+                            target="_blank"><img src="images/amazonlogo.jpg" class="w-25"></a>
                     </p>
                 </div>
-            </div>
+                </div>
 
 
-        </section>
+            </section>
 
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-            crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+                crossorigin="anonymous"></script>
 
-        <!-- aos -->
-        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-        <script>
-            AOS.init();
-        </script>
+            <!-- aos -->
+            <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+            <script>
+                AOS.init();
+            </script>
 </body>
 
 </html>
