--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Good Vibes, Good Life:หนังสือพลังบวกเพื่อการรักตัวเอง</title>
+    <!-- ✅ Meta Description -->
+    <meta name="description"
+        content="รีวิวหนังสือพัฒนาตัวเอง Good Vibes, Good Life โดย Vex King ที่ช่วยสร้างพลังบวก การรักตัวเอง และมุมมองการใช้ชีวิตอย่างมีความสุข พร้อมแรงบันดาลใจดีๆ สำหรับทุกวัน">
     <meta name="keywords"
         content="พลังบวก,หนังสือพัฒนาตัวเอง,การรักตัวเอง,มุมมองการใช้ชีวิต,Good vibes, Good life,แรงบันดาลใจ">
     <!-- เน้นให้ความสำคัญชของชื่อเรื่องมากขึ้น อย่าลืมเด็ดขาด -->
@@ -47,11 +50,11 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img src="images/front cover.jpg" class="mg-fluid h-100 w-100 object-fit-cover"
-                                        alt="...">
+                                        alt="ปกหนังสือพัฒนาตัวเอง Good Vibes Good Life โดย Vex King">
                                 </div>
                                 <div class="carousel-item item-ipad">
                                     <img src="images/back cover.jpg" class="mg-fluid h-100 w-100 object-fit-cover"
-                                        alt="...">
+                                        alt="ปกหนังสือพัฒนาตัวเอง Good Vibes Good Life โดย Vex King">
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
@@ -153,8 +156,9 @@
             <article class="row pt-3">
                 <!-- ประโยชน์1 -->
                 <div class="col-12 col-md-6 col-lg-6 text-center">
-                    <img src="images/goodvibes03.webp" alt="" class="img-fluid w-50" data-aos="flip-left"
-                        data-aos-duration="1000" data-aos-easing="ease-in-sine">
+                    <img src="images/goodvibes03.webp" alt="แนวคิดพลังบวกจากหนังสือพัฒนาตัวเอง Good Vibes Good Life"
+                        class="img-fluid w-50" data-aos="flip-left" data-aos-duration="1000"
+                        data-aos-easing="ease-in-sine">
                     <h3>Good Vibes</h3>
                     <p>เรียนรู้ว่าทุกความคิด ความรู้สึก และการกระทำ
                         <br>คือพลังที่ส่งผลต่อสิ่งที่คุณดึงดูดเข้ามาในชีวิต
@@ -162,8 +166,9 @@
                 </div>
                 <!-- ประโยชน์2 -->
                 <div class="col-12 col-md-6 col-lg-6 text-center">
-                    <img src="images/self-love02.webp" class="img-fluid w-50" data-aos="flip-left"
-                        data-aos-duration="1000" data-aos-easing="ease-in-sine">
+                    <img src="images/self-love02.webp"
+                        alt="แนวคิดการรักตัวเองจากหนังสือพัฒนาตัวเอง Good Vibes Good Life" class="img-fluid w-50"
+                        data-aos="flip-left" data-aos-duration="1000" data-aos-easing="ease-in-sine">
                     <h3>Self-Love</h3>
                     <p>หนังสือไม่ได้พูดถึงการรักตัวเองแบบผิวเผิน
                         <br>แต่ชวนให้คุณมองเห็นคุณค่าของตัวเองในแบบที่คุณเป็นจริงๆ
@@ -171,8 +176,9 @@
                 </div>
                 <!-- ประโยชน์3  -->
                 <div class="col-12 col-md-6 col-lg-6 text-center">
-                    <img src="images/unstable02.webp" class="img-fluid w-50" data-aos="flip-left"
-                        data-aos-duration="1000" data-aos-easing="ease-in-sine">
+                    <img src="images/unstable02.webp" alt="แนวคิดการรักตัวเองจากหนังสือพัฒนาตัวเอง Good Vibes Good Life"
+                        class="img-fluid w-50" data-aos="flip-left" data-aos-duration="1000"
+                        data-aos-easing="ease-in-sine">
                     <h3>Calm Mind</h3>
                     <p>เหมาะสำหรับคนที่กำลังเผชิญกับความท้าทายในชีวิต
                         <br>หนังสือจะช่วยให้คุณเข้าใจวิธีเปลี่ยนมุมมองต่อสถานการณ์ และกลับมามีสมดุลทางใจอีกครั้ง
@@ -180,8 +186,9 @@
                 </div>
                 <!-- ประโยชน์4 -->
                 <div class="col-12 col-md-6 col-lg-6 text-center">
-                    <img src="images/inspire02.webp" class="img-fluid w-50" data-aos="flip-left"
-                        data-aos-duration="1000" data-aos-easing="ease-in-sine">
+                    <img src="images/inspire02.webp" alt="แรงบันดาลใจในการใช้ชีวิตด้วยพลังบวกจาก Good Vibes Good Life"
+                        class="img-fluid w-50" data-aos="flip-left" data-aos-duration="1000"
+                        data-aos-easing="ease-in-sine">
                     <h3>Inspire Change</h3>
                     <p>เมื่อเข้าใจว่าความสุขเริ่มจากภายใน
                         <br>คุณจะเริ่มเห็นเส้นทางใหม่ของการเติบโตทั้งในชีวิตและจิตใจ
@@ -252,9 +259,12 @@
                 </div>
                 </div>
 
-
+                <div class="p-3 mt-5">
+                    <p class="text-center footertext">เว็บไซต์นี้จัดทำขึ้นเพื่อแนะนำหนังสือพัฒนาตัวเอง Good Vibes, Good Life |
+                        เติมพลังบวก การรักตัวเอง
+                        และแรงบันดาลใจในการใช้ชีวิต</p>
+                </div>
             </section>
-
 
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
