--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
         rel="stylesheet">
+
+    <link
+        href="https://fonts.googleapis.com/css2?family=Sarabun:ital
+        ,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
+        rel="stylesheet">
+        
     <!-- link text quotes -->
     <link href="https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap" rel="stylesheet">
     <!-- aos -->
@@ -260,7 +266,8 @@
                 </div>
 
                 <div class="p-3 mt-5">
-                    <p class="text-center footertext">เว็บไซต์นี้จัดทำขึ้นเพื่อแนะนำหนังสือพัฒนาตัวเอง Good Vibes, Good Life |
+                    <p class="small-text text-center footertext">เว็บไซต์นี้จัดทำขึ้นเพื่อแนะนำหนังสือพัฒนาตัวเอง Good
+                        Vibes, Good Life |
                         เติมพลังบวก การรักตัวเอง
                         และแรงบันดาลใจในการใช้ชีวิต</p>
                 </div>
