--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         href="https://fonts.googleapis.com/css2?family=Sarabun:ital
         ,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap"
         rel="stylesheet">
-        
+
     <!-- link text quotes -->
     <link href="https://fonts.googleapis.com/css2?family=Rouge+Script&display=swap" rel="stylesheet">
     <!-- aos -->
@@ -187,7 +187,7 @@
                         data-aos-easing="ease-in-sine">
                     <h3>Calm Mind</h3>
                     <p>เหมาะสำหรับคนที่กำลังเผชิญกับความท้าทายในชีวิต
-                        <br>หนังสือจะช่วยให้คุณเข้าใจวิธีเปลี่ยนมุมมองต่อสถานการณ์ และกลับมามีสมดุลทางใจอีกครั้ง
+                        หนังสือจะช่วยให้คุณเข้าใจวิธีเปลี่ยนมุมมองต่อสถานการณ์ และกลับมามีสมดุลทางใจอีกครั้ง
                     </p>
                 </div>
                 <!-- ประโยชน์4 -->
@@ -266,8 +266,8 @@
                 </div>
 
                 <div class="p-3 mt-5">
-                    <p class="small-text text-center footertext">เว็บไซต์นี้จัดทำขึ้นเพื่อแนะนำหนังสือพัฒนาตัวเอง Good
-                        Vibes, Good Life |
+                    <p class="small-text text-center footertext">
+                        เว็บไซต์นี้จัดทำขึ้นเพื่อแนะนำหนังสือพัฒนาตัวเอง Good Vibes, Good Life <br>
                         เติมพลังบวก การรักตัวเอง
                         และแรงบันดาลใจในการใช้ชีวิต</p>
                 </div>
