--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
                 <div class="p-3 mt-5">
                     <p class="small-text text-center footertext">
-                        เว็บไซต์นี้จัดทำขึ้นเพื่อแนะนำหนังสือพัฒนาตัวเอง Good Vibes, Good Life <br>
+                        เว็บไซต์นี้จัดทำขึ้นเพื่อแนะนำหนังสือพัฒนาตัวเอง <br> Good Vibes, Good Life <br>
                         เติมพลังบวก การรักตัวเอง
                         และแรงบันดาลใจในการใช้ชีวิต</p>
                 </div>
