--- a/index.html
+++ b/index.html
@@ -273,6 +273,17 @@
                 </div>
             </section>
 
+        <div class="p-3 mt-5">
+            <p class="small-text footertext">
+            แหล่งอ้างอิง <br>
+             <a href="https://www.naiin.com/product/detail/533411?srsltid=AfmBOopj9mSQGLW2NGS1_3U2dnzCDJZ0tKYfN19cNG2b56rtK9lP46S5"
+                            target="_black"> รูปภาพหนังสือ</a>
+             <a href="https://www.youtube.com/embed/X8NyW8XAhfg?rel=0"
+                            target="_black"> คลิปวิดีโอจาก Youtube</a>
+            </p>
+
+        </div>
+
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
                 integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
                 crossorigin="anonymous"></script>
